Fix nav bar mobile responsive, remove grid to allow for collapse

--- a/app/resources/pokecenter/pokecenter.module.css
+++ b/app/resources/pokecenter/pokecenter.module.css
@@ -18,11 +18,20 @@
   border-color: #919191 #ffffff #ffffff #ffffff; /* red top, green right, blue bottom and yellow left */
 }
 
+.img {
+  border-radius: 10px;
+}
+
 /* mobile grid */
+/* collapsible @ 575px */
 .welcome {
   display: grid;
   grid-template-columns: 1fr;
-  margin-top: 58pt;
+  margin-top: 76pt;
+  margin-left: 24pt;
+  margin-right: 24pt;
+  padding-top: 24pt;
+  margin-bottom: 24pt;
 }
 
 /* 12 column grid */
@@ -50,6 +59,10 @@
 
 .welcome > a {
   text-align: left;
+  padding-bottom: 24pt;
+  /* margin-left: 24pt;
+  margin-right: 24pt;
+  margin-bottom: 24pt; */
   /* background: grey; */
   /* padding: 48pt; */
   /* border: 1px solid black; */
@@ -70,6 +83,8 @@
 .projects {
   display: grid;
   grid-template-columns: 1fr;
+  margin-left: 24pt;
+  margin-right: 24pt;
   /* border: 1px solid black; */
 }
 
@@ -79,10 +94,10 @@
 
 .projects > a {
   margin-top: 16pt;
-  /* margin-bottom: 16pt; */
-  /* padding: 24pt; */
-  /* border: 1px solid black; */
 }
+/* margin-bottom: 16pt; */
+/* padding: 24pt; */
+/* border: 1px solid black; */
 
 .projectimg {
 }
@@ -92,20 +107,21 @@
   padding: 24pt;
 }
 
-/* .projects a:nth-child(1) {
-  grid-column: 2/5;
-  grid-row: 1;
+.projects a:nth-child(1) {
+  /* grid-column: 2/5;
+  grid-row: 1; */
 }
 
 .projects a:nth-child(2) {
-  grid-column: 5/8;
-  grid-row: 1;
+  /* grid-column: 5/8;
+  grid-row: 1; */
 }
 
 .projects a:nth-child(3) {
-  grid-column: 8/11;
-  grid-row: 1;
-} */
+  /* grid-column: 8/11;
+  grid-row: 1; */
+  margin-bottom: 24pt;
+}
 
 /* mobile styles */
 
@@ -120,6 +136,16 @@ Tablet–landscape */
 
 /* small tablet styles */
 @media screen and (min-width: 620px) {
+  .welcome {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-top: 76pt;
+    margin-left: 24pt;
+    margin-right: 24pt;
+    padding-top: 24pt;
+    margin-bottom: 24pt;
+  }
+
   .projects {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
